Wireshark assertion failure ("call_dissector_only: assertion failed: (handle != NULL)")
This issue was migrated from bug 15613 in our old bug tracker.
Original bug information:
Reporter: Mateusz Jurczyk
Status: RESOLVED FIXED
Product: Wireshark
Component: Dissection engine (libwireshark)
OS: Linux
Platform: x86-64
Version: Git
Attachments:
signal_sigabrt_7fffdf0a3fcf_4972_11c5e4ac9391c54d3de443f2204573dd.pcapng: Reproducer
See also: http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2019-10894