GSS-API: Make sure we call a valid dissector.

Make our unknown dissector handle logic conistent with other parts of
the code.

Conflicts:
	epan/dissectors/packet-gssapi.c

Bug: 15613
Change-Id: Id0daf9bf0be14b99ec592f4f561cc8935d5cb4a6
Reviewed-on: https://code.wireshark.org/review/32576
Reviewed-by: Gerald Combs <gerald@wireshark.org>
Petri-Dish: Gerald Combs <gerald@wireshark.org>
Tested-by: Petri Dish Buildbot
Reviewed-by: Dario Lombardo <lomato@gmail.com>
(cherry picked from commit 8cdc95842687feee32856afba8e7087396082158)
Reviewed-on: https://code.wireshark.org/review/32586